<?xml version="1.0" encoding="utf-8"?>

<!-- ventana registro -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/dark_grey"

    android:fitsSystemWindows="false"

    android:padding="32dp">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="32dp"
        android:fontFamily="@font/jost_family"
        android:text="@string/registro"
        android:textColor="@android:color/white"
        android:textSize="36sp"

        android:textStyle="bold"

        app:layout_constraintBottom_toTopOf="@+id/tvEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/jost_family"
        android:text="@string/mayus_email"
        android:textColor="@android:color/white"

        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/etEmail"

        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="8dp"

        android:background="@drawable/bg_yellow_input"

        android:fontFamily="@font/jost_family"

        android:inputType="textEmailAddress"

        android:paddingHorizontal="16dp"

        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"
        android:fontFamily="@font/jost_family"
        android:text="@string/usuario"
        android:textColor="@android:color/white"

        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/etUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:id="@+id/etUsername"

        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="8dp"

        android:background="@drawable/bg_yellow_input"

        android:fontFamily="@font/jost_family"

        android:paddingHorizontal="16dp"

        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

    <TextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="24dp"
        android:fontFamily="@font/jost_family"
        android:text="@string/login_pass"
        android:textColor="@android:color/white"

        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="8dp"
        android:background="@drawable/bg_yellow_input"
        android:fontFamily="@font/jost_family"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"

        android:textColor="@android:color/white"

        app:layout_constraintBottom_toTopOf="@+id/btnRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegister"

        android:layout_width="0dp"
        android:layout_height="50dp"

        android:layout_marginTop="40dp"
        android:background="@drawable/bg_yellow_button"
        android:fontFamily="@font/jost_family"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/registrarse"

        android:textAllCaps="false"
        android:textColor="#000000"

        android:textSize="20sp"
        android:textStyle="bold"

        app:backgroundTint="@null"

        app:layout_constraintBottom_toTopOf="@+id/tvLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:fontFamily="@font/jost_family"
        android:padding="16dp"
        android:text="@string/iniciar_sesi_n"

        android:textColor="#4287f5"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>